# Clash-compiler-for-RTLola

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  cabal.project  lola2Clash.cabal  setup_clash.sh  stack.yaml  type.hs
.stack-work/: stack.sqlite3
clash-target/: README.md  cabal.project  clash-target.cabal  hie.yaml
clash-target/tests/: doctests.hs
mir/: aggregage_from_input.json  all_eges_offset.json  can_pipeline.json  complex_graph.json  complex_graph1.json  complex_graph2.json  complex_graph3.json  complex_graph4.json  complex_graph5.json  complex_graph6.json  complex_graph7.json  complex_graph8.json  complex_graph9.json  disjoint_cycles.json  event_time_both_cycle.json  multiple_cycles.json  multiple_cycles_with_input_offsets.json  no_input.json  no_input_all_offsets.json  no_input_self_loop.json  pipeline1.json  pipeline2.json  pipeline3.json  pipeline_and_non_pipeline.json  refinable1.json  refinable2.json  refinable3.json  simple.json  simple_graph1.json  simple_mixed.json  sliding_window.json  sliding_window_and_offset.json  two_cycles.json
specs/: add_on_condition.csv  add_on_condition.lola  add_streams.csv  add_streams.lola  can_pipeline.lola  complex_graph.lola  complex_graph1.lola  complex_graph4.lola  complex_graph5.lola  complex_graph7.lola  complex_graph8.lola  delay.lola  diff_freq_simple.lola  disjoint_cycles.lola  event_time_both_cycle.lola  intruder.csv  mixed.lola  no_input_self_loop.lola  pipeline1.lola  pipeline3.lola  sliding_window.lola  sliding_window_and_offset.lola
src/: codegen.rs  hardware_ir.rs  main.rs  transpile.rs  utils.rs
(+913 files in other folders)
