[package]
name = "Lola2Clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: to use ssh credentials setup in system git set the CARGO_NET_GIT_FETCH_WITH_CLI=true env variable
#       `CARGO_NET_GIT_FETCH_WITH_CLI=true cargo run`
rtlola-frontend = {git = "ssh://git@projects.cispa.saarland/group-finkbeiner/tools/RTLola/RTLola-Frontend.git", branch = "shift_layer_feature", features=["shift_layer"]}
clap = { version = "4.5.13", features = ['cargo', 'derive']}
serde = { version = "1.0.208", features = ['derive']}
serde_json = "1.0.120"
handlebars = "6.0.0"

[features]
shift_layer = []
