[package]
name = "Lola2Clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlola-frontend = "0.7"
clap = { version = "4.5.13", features = ['cargo', 'derive']}
serde = { version = "1.0.208", features = ['derive']}
serde_json = "1.0.120"
handlebars = "6.0.0"
uom = { version = "0.31.1", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}